virt01/manual/no_deploy/deluge-wg/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: deluge
  labels:
    app: deluge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
      annotations:
        backup.velero.io/backup-volumes-excludes: torrent
        backup.velero.io/backup-volumes: deluge-pv
    spec:
      serviceAccountName: deluge-sa
      containers:
        - name: wireguard
          image: harbor.nf.lab/homelab/wireguard:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: wg-config
              mountPath: /etc/wireguard/wg0.conf
              subPath: wg0.conf
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          resources:
            requests:
              memory: 10Mi
              cpu: 25m
        - name: deluge
          image: harbor.nf.lab/proxy.docker.io/linuxserver/deluge
          imagePullPolicy: Always
          ports:
            - containerPort: 8112
              name: deluge-port
              protocol: TCP
          resources:
            requests:
              memory: 10Mi
              cpu: 25m
          volumeMounts:
            - name: deluge-pv
              mountPath: /config
            - name: torrent
              mountPath: /data
            - name: web-config
              mountPath: /config/web.conf.cm
              subPath: web.conf
            - name: core-config
              mountPath: /config/core.conf.cm
              subPath: core.conf
      volumes:
        - name: deluge-pv
          persistentVolumeClaim:
            claimName: deluge-pvc
        - name: torrent
          hostPath:
            type: Directory
#          nfs:
            path: /mnt/ssd01/torrent
#            server: 10.0.0.100            
        - name: wg-config
          configMap:
            name: wireguard-cm
        - name: web-config
          configMap:
            name: web-conf-cm
        - name: core-config
          configMap:
            name: core-conf-cm
