virt01/manual/no_deploy/deluge-wg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge-ingress
  namespace: torrent
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  ingressClassName: traefik
  rules:
  - host: deluge.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: deluge-svc
            port:
              number: 8112
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - deluge.k3s.nf.lab
    - deluge.nf.lab
    secretName: deluge-cert-tls
